--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <li><a href="about.html">About</a></li>
         <li><a href="events.html">Events</a></li>
         <li><a href="resources.html">Resources</a></li>
-        <li><a href="auth.html">Account</a></li>
+        <li><a href="account.html">Account</a></li>
         <li><a href="contact.html">Contact</a></li>
         <li><a href="applications.html">Applications</a></li>
       </ul>
