--- a/about.html
+++ b/about.html
@@ -119,7 +119,7 @@
       </article>
       <article class="card">
         <div class="role">
-          <img class="avatar" src="assets/images/vice-president1.jpg" alt="Vice President — Maxim Towers"/>
+          <img class="avatar" src="assets/images/vice-president2.jpeg" alt="Vice President — Maxim Towers"/>
           <div>
             <span class="eyebrow">Vice President</span>
             <h3>Maxim Towers</h3>
