--- a/about.html
+++ b/about.html
@@ -155,7 +155,7 @@
 
       <article class="card">
         <div class="role">
-          <span class="avatar avatar--initials" style="width:72px;height:72px;border-radius:999px" title="Kayla Zhu">JZ</span>
+          <span class="avatar avatar--initials" style="width:72px;height:72px;border-radius:999px" title="Kayla McCall-Williams">JZ</span>
           <div>
             <span class="eyebrow">Creative Director</span>
             <h3>Kayla Zhu</h3>
