--- a/about.html
+++ b/about.html
@@ -94,11 +94,11 @@
     <!-- Advisor -->
     <section class="card" style="margin-top:1.1rem">
       <div class="advisor">
-        <img class="avatar" src="assets/images/public-relations.jpg" alt="Faculty Advisor"/>
+        <img class="avatar" src="assets/images/faculty-advisor.jpg" alt="Faculty Advisor"/>
         <div>
           <span class="eyebrow">Faculty Advisor</span>
-          <h3>Dr. [Advisor Name]</h3>
-          <div class="meta">Department of [Discipline], The Ohio State University</div>
+          <h3>Dr. Birsel</h3>
+          <div class="meta">Department of Finance, The Ohio State University</div>
           <p class="desc">Guides the club’s academic alignment and ethics, supports programming, and helps coordinate university resources. Provides feedback on speaker topics and process standards.</p>
         </div>
       </div>
