--- a/about.html
+++ b/about.html
@@ -155,10 +155,10 @@
 
       <article class="card">
         <div class="role">
-          <span class="avatar avatar--initials" style="width:72px;height:72px;border-radius:999px" title="Kayla McCall-Williams">JZ</span>
+          <span class="avatar avatar--initials" style="width:72px;height:72px;border-radius:999px" title="Kayla McCall-Williams">KM</span>
           <div>
             <span class="eyebrow">Creative Director</span>
-            <h3>Kayla Zhu</h3>
+            <h3>Kayla McCall-Williams</h3>
             <p>Oversees design and media for the club.</p>
           </div>
         </div>
