--- a/about.html
+++ b/about.html
@@ -164,16 +164,19 @@
         </div>
       </article>
 
-      <article class="card">
-        <div class="role">
-          <span class="avatar avatar--initials" style="width:72px;height:72px;border-radius:999px" title="Brian Liao">BL</span>
-          <div>
-            <span class="eyebrow">Public Relations</span>
-            <h3>Brian Liao</h3>
-            <p>Leads social channels and external communications.</p>
-          </div>
-        </div>
-      </article>
+<article class="card">
+  <div class="role">
+    <img class="avatar"
+         src="assets/images/public-relations.jpg"
+         alt="Public Relations — Brian Liao"/>
+    <div>
+      <span class="eyebrow">Public Relations</span>
+      <h3>Brian Liao</h3>
+      <p>Leads social channels and external communications.</p>
+    </div>
+  </div>
+</article>
+
 
       <article class="card">
         <div class="role">
