--- a/about.html
+++ b/about.html
@@ -189,16 +189,23 @@
         </div>
       </article>
 
-      <article class="card">
-        <div class="role">
-          <img class="avatar" src="assets/images/trading-committee.jpg" alt="Board of Traders"/>
-          <div>
-            <span class="eyebrow">Board of Traders</span>
-            <h3>Committee</h3>
-            <p>Sets process standards, audits journals, and mentors members.</p>
-          </div>
-        </div>
-      </article>
+<article class="card">
+  <div class="role">
+    <span class="avatar avatar--initials"
+          style="width:72px;height:72px;border-radius:999px"
+          title="Board of Traders Committee">
+      BT
+    </span>
+    <div>
+      <span class="eyebrow">Board of Traders</span>
+      <h3>Committee</h3>
+      <p>Sets process standards, audits journals, and mentors members.</p>
+    </div>
+  </div>
+</article>
+
+
+      
     </section>
   </main>
 
